--- a/face-tracker/face-tracker/Base.lproj/Main.storyboard
+++ b/face-tracker/face-tracker/Base.lproj/Main.storyboard
@@ -69,6 +69,19 @@
                                 <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nJr-gn-pfJ">
+                                <rect key="frame" x="265" y="607" width="100" height="50"/>
+                                <color key="backgroundColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="CNa-HY-Yfo"/>
+                                    <constraint firstAttribute="height" constant="50" id="hdn-xT-JAc"/>
+                                </constraints>
+                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Refresh"/>
+                                <connections>
+                                    <action selector="refreshButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="53H-Tm-edh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -77,6 +90,7 @@
                             <constraint firstItem="ydT-Mh-j8O" firstAttribute="top" secondItem="IVp-pH-nGA" secondAttribute="bottom" constant="10" id="6HA-XM-7wT"/>
                             <constraint firstItem="155-Bb-Cmk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="7gX-w0-16m"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="155-Bb-Cmk" secondAttribute="trailing" constant="10" id="AYf-Cn-cx1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nJr-gn-pfJ" secondAttribute="bottom" constant="10" id="GSL-bZ-vPb"/>
                             <constraint firstItem="zJ6-ww-m5X" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="HJV-aq-79p"/>
                             <constraint firstItem="ROh-oB-6o6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="NdC-f8-3c1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="KCh-MF-Dm6" secondAttribute="bottom" id="OnN-dY-d8a"/>
@@ -84,6 +98,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zJ6-ww-m5X" secondAttribute="trailing" id="Vdv-9u-K8a"/>
                             <constraint firstItem="KCh-MF-Dm6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="clh-UU-2Pz"/>
                             <constraint firstItem="ydT-Mh-j8O" firstAttribute="centerX" secondItem="IVp-pH-nGA" secondAttribute="centerX" id="eHa-hA-l54"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nJr-gn-pfJ" secondAttribute="trailing" constant="10" id="gRo-iw-Lwv"/>
                             <constraint firstItem="zJ6-ww-m5X" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ibE-nh-bBr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KCh-MF-Dm6" secondAttribute="trailing" id="lAe-Nx-5Tq"/>
                             <constraint firstItem="ROh-oB-6o6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="s1u-yJ-3kI"/>
